--- a/Project/FrontEnd/WebApplication1/Views/Home/Index.cshtml
+++ b/Project/FrontEnd/WebApplication1/Views/Home/Index.cshtml
@@ -2,7 +2,177 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="landing">
+    <div class="home-wrap">
+        <div class="home-inner">
+
+        </div>
+    </div>
+</div>
+
+<div class="caption text-center">
+    <h1>Welcome to University Rating</h1>
+    <h3>Alege Universitatea Cea Mai Buna</h3>
+    <a class="btn btn-outline-light  btn-lg" href="#course"> Get Start </a>
+</div>
+
+<!--End Landing Page Section-->
+	</div>
+<!--End Home Section-->
+<!--Start course section-->
+<div id="course" class="offset">
+    <div class="col-12 narrow text-center">
+        <h1> Theme Advanced Bootstrap Course</h1>
+        <p class="lead">
+            Learn Bootstrap by creating an advanced Bootstrap 4
+            Responsive website Template from scratch, witch no steps skiped!
+        </p>
+        <a class="btn btn-secondary btn-md" href="http://bit.ly/advanced-bootstrap-course"
+           target="_blank">Bootstrap Course</a>
+
+
+    </div>
+</div>
+<!-- End Course Section -->
+<!--Start Feature Section-->
+<div id="features" class=offset>
+
+    <!--Start Jumbotron-->
+    <div class="jumbotron">
+        <div class="narrow text-center">
+            <div class="col-12">
+                <h3 class="heading">Features</h3>
+                <div class="heading-underline"></div>
+            </div>
+
+            <div class="row text-center">
+
+                <div class="col-md-4">
+                    <div class="feature">
+                        <i class="fas fa-play-circle fa-4x" data-fa-transform="
+							shrink-3 up-5"></i>
+                        <h3>Custom animation</h3>
+                        <p>
+                            Animate.css and Waypoints.js allow for smooth animations
+                            scrolling down the site.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="feature">
+                        <i class="fas fa-sliders-h fa-4x" data-fa-transform="
+							shrink-4.5 up-4.5"></i>
+                        <h3>Content Slider</h3>
+                        <p>
+                            Make navigation content sliders seampless with it's
+                            content carousel navigation
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="feature">
+                        <i class="fab fa-wpforms fa-4x" data-fa-transform="
+							shrink-4 up-5"></i>
+                        <h3>Contact Form</h3>
+                        <p>
+                            The bootstrap HTML form wil send directly to your email
+                            address using tehnology
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+    </div>
+    <!--End Jumbotron-->
+
+
+</div>
+<!--End Feature Section-->
+<!--Start Resources Section-->
+<div id="resources" class=offset>
+    <div class="fixed-background">
+        <div class="row dark text-center">
+
+            <div class="col-12">
+                <h3 class="heading">Built With Care</h3>
+                <div class="heading-underline"></div>
+            </div>
+
+
+
+            <div class="col-md-4">
+                <h3>HTML 5</h3>
+                <div class="feature">
+                    <i class="fas fa-code fa-3x"></i>
+                </div>
+                <p class="lead">Built with the latest, HTML 5</p>
+            </div>
+
+
+            <div class="col-md-4">
+                <h3>BOOTSTRAP 4</h3>
+                <div class="feature">
+                    <i class="fas fa-bold fa-3x"></i>
+                </div>
+                <p class="lead">Built with the latest, BOOTSTRAP 4</p>
+            </div>
+
+
+            <div class="col-md-4">
+                <h3>CSS 3</h3>
+                <div class="feature">
+                    <i class="fab fa-css3 fa-3x"></i>
+                </div>
+                <p class="lead">Built with the latest, CSS 3</p>
+            </div>
+
+
+        </div>
+
+        <div class="fixed-wrap">
+            <div class="fixed">
+
+            </div>
+        </div>
+
+    </div>
+
+</div>
+<!--End resources Section-->
+<!--Start Clients Section-->
+<div id="clients" class=offset>
+
+    <!--Start Jumbotron-->
+    <div class="jumbotron">
+
+        <div class="col-12">
+            <h3 class="heading text-center">Clients</h3>
+            <div class="heading-underline"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 clients">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="/images/client1.png">
+                    </div>
+                    <div class="col-md-8">
+                        <blockquote>
+                            <i class="fas fa-quote-left"></i>
+                            lakj wije rwioer w;ler wehrwekj rwier w3newbiew
+                            ;r uwehi ksgf fixed rj eerh erioer iwerfiw
+                            <hr class="clients-hr">
+                            <cite>&#8212; Eric, Small Business Owner</cite>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+
+</div>
+</div>
 </div>
