--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Index.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model UniversityRating.Presentation.Models.Home.IndexViewModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -165,39 +167,58 @@
         </div>
 
         <div class="row">
-            <div class="col-md-6 clients">
-                <div class="row">
-                    <div class="col-md-4">
-                        <img src="img/client1.png">
-                    </div>
-                    <div class="col-md-8">
-                        <blockquote>
-                            <i class="fas fa-quote-left"></i>
-                            lakj wije rwioer w;ler wehrwekj rwier w3newbiew
-                            ;r uwehi ksgf fixed rj eerh erioer iwerfiw
-                            <hr class="clients-hr">
-                            <cite>&#8212; Eric, Small Business Owner</cite>
-                        </blockquote>
+            @foreach (var teacher in Model.TopTeachers)
+            {
+                <div class="col-md-6 clients">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img src="img/client1.png">
+                        </div>
+                        <div class="col-md-8">
+                            <blockquote>
+                                <i class="fas fa-quote-left"></i>
+                                @($"{teacher.LastName} {teacher.FirstName}")
+                                <hr class="clients-hr">
+                                <cite>&#8212; @Math.Round(teacher.MarkAvg, 2)</cite>
+                            </blockquote>
+                        </div>
                     </div>
                 </div>
-            </div>
+            }
 
-            <div class="col-md-6 clients">
-                <div class="row">
-                    <div class="col-md-4">
-                        <img src="img/client2.png">
-                    </div>
-                    <div class="col-md-8">
-                        <blockquote>
-                            <i class="fas fa-quote-left"></i>
-                            lakj wije rwioer w;ler wehrwekj rwier w3newbiew
-                            ;r uwehi ksgf fixed rj eerh erioer iwerfiw
-                            <hr class="clients-hr">
-                            <cite>&#8212; Rachel, Professional Photographer</cite>
-                        </blockquote>
-                    </div>
+            @*<div class="col-md-6 clients">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/client1.png">
+                </div>
+                <div class="col-md-8">
+                    <blockquote>
+                        <i class="fas fa-quote-left"></i>
+                        lakj wije rwioer w;ler wehrwekj rwier w3newbiew
+                        ;r uwehi ksgf fixed rj eerh erioer iwerfiw
+                        <hr class="clients-hr">
+                        <cite>&#8212; Eric, Small Business Owner</cite>
+                    </blockquote>
                 </div>
             </div>
+        </div>*@
+
+            @*<div class="col-md-6 clients">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/client2.png">
+                </div>
+                <div class="col-md-8">
+                    <blockquote>
+                        <i class="fas fa-quote-left"></i>
+                        lakj wije rwioer w;ler wehrwekj rwier w3newbiew
+                        ;r uwehi ksgf fixed rj eerh erioer iwerfiw
+                        <hr class="clients-hr">
+                        <cite>&#8212; Rachel, Professional Photographer</cite>
+                    </blockquote>
+                </div>
+            </div>
+        </div>*@
 
         </div>
         <!--End row-->
