--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_Layout.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_Layout.cshtml
@@ -131,7 +131,7 @@
                 }
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#course">Course</a>
+                    <a class="nav-link" asp-controller="Home" asp-action="Courses">Course</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#features">Features</a>
