--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Index.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model UniversityRating.Presentation.Models.Home.IndexViewModel
+﻿@using UniversityRating.Presentation.Models.Teacher
+@model UniversityRating.Presentation.Models.Home.IndexViewModel
 
 @{
     ViewData["Title"] = "Home Page";
@@ -23,7 +24,7 @@
 
 <div class="caption text-center">
     <h1>Welcome to University Rating</h1>
-    <h3>Alege Universitatea Cea Mai Buna</h3>
+    <h3>Choose the Best University</h3>
     <a class="btn btn-outline-light  btn-lg" href="#course"> Get Start </a>
 </div>
 
@@ -110,13 +111,22 @@
         <div class="row dark text-center">
 
             <div class="col-12">
-                <h3 class="heading">Built With Care</h3>
+                <h3 class="heading">Top Universities</h3>
                 <div class="heading-underline"></div>
             </div>
-
-
-
+        @foreach (var university in Model.TopUniversities)
+        {
             <div class="col-md-4">
+                <h3>@($"{university.Name} ")</h3>
+                <div class="feature">
+                    <i class="fas fa-bold fa-3x"></i>
+                </div>
+                <p class="lead">@($"{university.Description} ")</p>
+                <p class="lead">@($"Averange Mark : {university.AvgMark}")</p>
+            </div>
+        }
+
+            @*<div class="col-md-4">
                 <h3>HTML 5</h3>
                 <div class="feature">
                     <i class="fas fa-code fa-3x"></i>
@@ -140,7 +150,7 @@
                     <i class="fab fa-css3 fa-3x"></i>
                 </div>
                 <p class="lead">Built with the latest, CSS 3</p>
-            </div>
+            </div>*@
 
 
         </div>
@@ -162,12 +172,12 @@
     <div class="jumbotron">
 
         <div class="col-12">
-            <h3 class="heading text-center">Clients</h3>
+            <h3 class="heading text-center">Top of Teachers</h3>
             <div class="heading-underline"></div>
         </div>
 
         <div class="row">
-            @foreach (var teacher in Model.TopTeachers)
+            @foreach (TopTeacherViewModel teacher in Model.TopTeachers)
             {
                 <div class="col-md-6 clients">
                     <div class="row">
@@ -179,7 +189,7 @@
                                 <i class="fas fa-quote-left"></i>
                                 @($"{teacher.LastName} {teacher.FirstName}")
                                 <hr class="clients-hr">
-                                <cite>&#8212; @Math.Round(teacher.MarkAvg, 2)</cite>
+                                <cite> Averange Mark : @Math.Round(teacher.MarkAvg, 2)</cite>
                             </blockquote>
                         </div>
                     </div>
@@ -229,7 +239,7 @@
     <div class="col-12 narrow text-center">
         <p class="lead">Learn more about university</p>
         <a class="btn btn-secondary btn-md" href="http://bit.ly/advanced-bootstrap-course"
-           target="_blank">Bootstrap Course</a>
+           target="_blank">University Rating</a>
     </div>
 
 </div>
