--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
@@ -64,7 +64,7 @@
 
                 <ul class="nav">
                     <li class="active">
-                        <a asp-controller="Home" asp-action="Courses">
+                        <a asp-controller="Home" asp-action="Universities">
                             <i class="pe-7s-graph"></i>
                             <p>Universities</p>
                         </a>
@@ -83,18 +83,13 @@
                             <p>Specialties</p>
                         </a>
                     </li>
+
                     <li>
-                        <a asp-controller="Home" asp-action="Maps">
-                            <i class="pe-7s-map-marker"></i>
-                            <p>Maps</p>
+                        <a asp-controller="Home" asp-action="Feedback">
+                            <i class="pe-7s-bell"></i>
+                            <p>Feedback</p>
                         </a>
                     </li>
-                    @*<li>
-                        <a href="notifications.html">
-                            <i class="pe-7s-bell"></i>
-                            <p>Notifications</p>
-                        </a>
-                    </li>*@
                     
                     <li>
                         <a asp-controller="Home" asp-action="User">
@@ -107,6 +102,13 @@
                         <a asp-controller="Home" asp-action="About">
                             <i class="pe-7s-news-paper"></i>
                             <p>About</p>
+                        </a>
+                    </li>
+                    
+                    <li>
+                        <a asp-controller="Home" asp-action="Maps">
+                            <i class="pe-7s-map-marker"></i>
+                            <p>Maps</p>
                         </a>
                     </li>
 
