--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/User.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Home/User.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@using Microsoft.AspNetCore.Identity
+@using UniversityRating.Data.Core.DomainModels.Identity
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
+
 @{
     ViewData["Title"] = "User";
     Layout = "/Views/Shared/_LayoutDashboard.cshtml";
@@ -29,111 +33,175 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="">
-                            <p>Account</p>
-                        </a>
-                    </li>
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        <li>
+                            <button type="submit" class="nav-link btn btn-link text-dark">
+                                <a asp-controller="Home" asp-action="User">Account</a>
+                            </button>
+                        </li>
 
-                    <li>
-                        <a href="#">
-                            <p>Log out</p>
-                        </a>
-                    </li>
-                    <li class="separator hidden-lg hidden-md"></li>
+                        <li>
+                            <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                            </form>
+                        </li>                        
+                        
+                    }
+                    else
+                    {
+                        <li >
+                            <a asp-area="Identity" asp-page="/Account/Register">Register</a>
+
+                        </li>
+                        <li >
+                            <a asp-area="Identity" asp-page="/Account/Login">Login</a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
     </nav>
 
 
-    <div class="content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="card">
-                        <div class="header">
-                            <h4 class="title">Edit Profile</h4>
-                        </div>
-                        <div class="content">
-                            <form>
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <div class="form-group">
-                                            <label>Username</label>
-                                            <input type="text" class="form-control" placeholder="Username" value="michael23">
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Email address</label>
-                                            <input type="email" class="form-control" placeholder="Email">
-                                        </div>
-                                    </div>
-                                </div>
 
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label>First Name</label>
-                                            <input type="text" class="form-control" placeholder="Company" value="Anghelenici">
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <div class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Edit Profile</h4>
+                            </div>
+                            <div class="content">
+                                <form>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            @*<div class="form-group">
+                                                    <label>Username</label>
+                                                    <input type="text" class="form-control" placeholder="Username" value="@(@User.Identity.Name)">
+                                                </div>*@
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label for="exampleInputEmail1">Email address</label>
+                                                <input type="email" class="form-control" placeholder="Email" value="@(User.Identity.Name)">
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            <label>Last Name</label>
-                                            <input type="text" class="form-control" placeholder="Last Name" value="Cristian">
-                                        </div>
-                                    </div>
-                                </div>
 
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="form-group">
-                                            <label>About Me</label>
-                                            <textarea rows="5" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini ,I'm in that two seat Lambo.</textarea>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label>First Name</label>
+                                                <input type="text" class="form-control" placeholder="Company" value="Anghelenici">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label>Last Name</label>
+                                                <input type="text" class="form-control" placeholder="Last Name" value="Cristian">
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
-                                <div class="clearfix"></div>
-                            </form>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                <label>About Me</label>
+                                                <textarea rows="5" class="form-control" placeholder="Here can be your description" value="Mike">About me.</textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
+                                    <div class="clearfix"></div>
+                                </form>
+                            </div>
                         </div>
                     </div>
-                </div>
-            <div class="col-md-4">
-                <div class="card card-user">
-                    <div class="image">
-                        <img src="/img/computers.png" />
-                    </div>
-                    <div class="content">
-                        <div class="author">
-                            <a href="#">
-                                <img class="avatar border-gray" src="/img/cristian.PNG" alt="..." />
+                    <div class="col-md-4">
+                        <div class="card card-user">
+                            <div class="image">
+                                <img src="/img/computers.png" />
+                            </div>
+                            <div class="content">
+                                <div class="author">
+                                    <a href="#">
+                                        <img class="avatar border-gray" src="/img/cristian.PNG" alt="..." />
 
-                                <h4 class="title">
-                                    Anghelenici Cristian<br />
-                                    <small>cristi123</small>
-                                </h4>
-                            </a>
+                                        <h4 class="title">
+                                            Anghelenici Cristian<br />
+                                            <small>cristi123</small>
+                                        </h4>
+                                    </a>
+                                </div>
+                                <p class="description text-center">
+                                    "Lamborghini Mercy <br>
+                                    Your chick she so thirsty <br>
+                                    I'm in that two seat Lambo"
+                                </p>
+                            </div>
+                            <hr>
+                            <div class="text-center">
+                                <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
+                                <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
+                                <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
+
+                            </div>
                         </div>
-                        <p class="description text-center">
-                            "Lamborghini Mercy <br>
-                            Your chick she so thirsty <br>
-                            I'm in that two seat Lambo"
-                        </p>
-                    </div>
-                    <hr>
-                    <div class="text-center">
-                        <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
-
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    }
+    else
+    {
+        @*<div class="row">
+            <div class="col-md-12">
+                <div class="container-fluid">
+                    <div class="form-group">
+                        <label>SignUp or Register to have an account </label>
+                        <button type="submit" class="btn btn-info btn-fill pull-right">Register</button>
+                        <button type="submit" class="btn btn-info btn-fill pull-right">SignUp</button>
+                    </div>
+                </div>
+            </div>
+        </div>*@
+
+
+        <div class="col-md-8">
+            <div class="card">
+                <div class="header">
+                    <h4 class="title">Profile</h4>
+                </div>
+                <div class="content">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <p>Login or Register to have Setings Account </p>
+
+                                </div>
+                                <button type="submit" class="btn btn-info btn-fill" href="/Identity/Account/Login">
+                                    <a class=" btn-info btn-fill" href="/Identity/Account/Login">Login</a>
+                                </button>
+
+                                <button type="submit" class="btn btn-info btn-fill" href="/Identity/Account/Register">
+                                    <a class=" btn-info btn-fill" href="/Identity/Account/Register">Register</a>
+                                </button>
+
+                            </div>
+                        </div>
+
+                    <div class="clearfix"></div>
+                    </form>
+
+                </div>
+            </div>
+            </div>
+
+    }
 </div>
