--- a/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
+++ b/Project/Project/UniversityRating/UniversityRating.Presentation/Views/Shared/_LayoutDashboard.cshtml
@@ -38,6 +38,15 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="//fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
         <link href="/assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
+        
+        @* ------------- *@
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>@ViewBag.Title - My ASP.NET Application</title>
+        <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+        <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+        @* ------------- *@
     </environment>
 
 </head>
@@ -129,6 +138,8 @@
 
     <environment include="Development">
         <script src="/lib/jquery/dist/jquery.min.js"></script>
+        <script src="/Scripts/jquery-ui-1.12.1.min.js"></script>
+
 
         <!--   Core JS Files   -->
         <script src="/assets/js/jquery.3.2.1.min.js" type="text/javascript"></script>
@@ -148,6 +159,15 @@
 
         <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
         <script src="/assets/js/demo.js"></script>
+    
+        @* --------------------------- *@
+        <script src="~/Scripts/jquery-1.12.4.min.js"></script>
+        <script src="~/Scripts/bootstrap.min.js"></script>
+        <script src="~/Scripts/jquery.validate.min.js"></script>
+        <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+        <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+        <script src="~/Scripts/notify.min.js"></script>
+        @* --------------------------- *@
     </environment>
 
     @RenderSection("Scripts", required: false)
